--- a/REDSpaceChallenge-iOS/Views/Spinner/SpinnerView.xib
+++ b/REDSpaceChallenge-iOS/Views/Spinner/SpinnerView.xib
@@ -3,10 +3,11 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SpinnerView" customModule="REDSpaceTest" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SpinnerView" customModule="REDSpaceChallenge_iOS" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view alpha="0.5" contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="414" height="441"/>
@@ -14,9 +15,10 @@
             <subviews>
                 <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="NFB-8N-PsE">
                     <rect key="frame" x="188.5" y="202" width="37" height="37"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </activityIndicatorView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstItem="NFB-8N-PsE" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="fIw-vh-d9m"/>
                 <constraint firstItem="NFB-8N-PsE" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="yzp-q1-szj"/>
@@ -25,4 +27,9 @@
             <point key="canvasLocation" x="137.68115942028987" y="282.25446428571428"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
